# CGMetadata

./: .bumpversion.cfg  404.html  CHANGELOG.md  README.md  README_DEV.md  dev_requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
cgmetadata/: __init__.py  __main__.py  cgmetadata.py  classes.py  cli.py  constants.py  iso6709.py  metadata.py  types.py  utils.py  xmp.py
cli/: index.html
docs/: cli.md  index.md  reference.md
reference/: index.html
search/: search_index.json
tests/: test_cli.py  test_imagemetadata.py  test_iso6709.py  test_videometadata.py  test_xmp.py
tests/data/: modified.xmp  test.HEIC  test.MOV.exiftool.xmp  test.MOV.xmp  test.jpeg.xmp
